---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=layout"
    - "--stop-after=layout"
    - panko/tests/cases/execute/functions/inline/test_error_inline_function_contains_definition_of_static_object.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/execute/functions/inline/test_error_inline_function_contains_definition_of_static_object.c"
   (function-definition inline stack-size=24
      (g~2 `fn() -> int` (static g))
      (compound-statement
         (return (0 `int` @0)))))

----- stderr -----
